CSS Fixes: center alignment of img fixed. Scroll:No to main and parent container.

--- a/PicGameOn/wwwroot/css/site.css
+++ b/PicGameOn/wwwroot/css/site.css
@@ -26,7 +26,7 @@ a {
 
 #center_content {
     height: 90%;
-    width: 87%;
+    width: 85%;
 }
 
 #face_pic_wrap {
@@ -48,10 +48,19 @@ a {
     width: 24px;
 }
 
+.rounded-circle {
+    width: 102px;
+    height: 102px;
+}
+
+.ui-draggable-handle
+{
+    touch-action:pan-x pan-y;
+}
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 @media (min-width: 768px) {
   html {
@@ -75,7 +84,7 @@ html {
     top: 0;
     width: 100%;
     white-space: nowrap;
-    line-height: 60px;
+    line-height: 80px;
 }
 
 /* Sticky footer styles
@@ -94,5 +103,5 @@ body {
   bottom: 0;
   width: 100%;
   white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 80px; /* Vertically center the text there */
 }
